--- a/css/js_index.css
+++ b/css/js_index.css
@@ -56,6 +56,9 @@
 
 .shortcut li a {
     text-decoration: none;
+    color: #999;
+    font-size: 12px;
+    line-height: 30px;
 }
 
 /* 快捷导航栏结束 */
