--- a/css/js_index.css
+++ b/css/js_index.css
@@ -180,8 +180,8 @@ body {
     border: 2px solid #e2231a;
     background-color: #fff;
 }
-/* 热词 */
 
+/* 热词 */
 .header .hotwords {
     position: absolute;
     height: 20px;
@@ -217,7 +217,7 @@ body {
     bottom: 0;
     margin: 20px 10px 0;
     font-size: 15px;
-    color: #999;
+    color: #666;
     line-height: 40px;
     text-decoration: none;
 }
@@ -226,16 +226,38 @@ body {
     color: #e2231a;
 }
 
-/* 热推 */
+/* 购物车 */
 .header #settleup {
     position: absolute;
     top: 25px;
     right: 230px;
     height: 32px;
     z-index: 21;
+    font-size: 12px;
+    color: #e2231a;
+    line-height: 32px;
 }
 
-.header .cw-icon {
+.cw-icon span {
+    position: absolute;
+    font-family: 'icomoon';
+    color: #e2231a;
+    font-size: 20px;
+    width: 36px;
+    height: 36px;
+    top: 0px;
+    left: 20px;
+}
+
+.cw-icon em {
+    position: absolute;
+    left: 45px;
+    height: 32px;
+    font-style: normal;
+
+}
+
+#settleup .cw-icon {
     left: 0;
     top: 0;
     width: 130px;
