--- a/css/js_index.css
+++ b/css/js_index.css
@@ -120,7 +120,7 @@ body {
     display: block;
     width: 134px;
     height: 120px;
-    background-image: url("https://img1.360buyimg.com/da/jfs/t1/16273/9/11655/153805/5c90a4f3E683206d9/eef283b0ed619fe4.gif?v=0.9212624875344684");
+    background-image: url(https://img1.360buyimg.com/da/jfs/t1/16273/9/11655/153805/5c90a4f3E683206d9/eef283b0ed619fe4.gif?v=0.9212624875344684);
     left: 0;
 }
 
@@ -280,7 +280,7 @@ body {
     position: absolute;
     right: 0;
     bottom: 0;
-    background-image: url("https://img11.360buyimg.com/babel/jfs/t1/51527/4/12973/28693/5d9ee893E89a7c8ff/a4e756f1a7fce70a.png.webp");
+    background-image: url(https://img11.360buyimg.com/babel/jfs/t1/51527/4/12973/28693/5d9ee893E89a7c8ff/a4e756f1a7fce70a.png.webp);
     display: block;
     width: 190px;
     height: 120px;
@@ -346,28 +346,28 @@ body {
 
 /* 多 */
 .mod_service_unit .mod_service_duo {
-    background-image: url("https://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/img/23f3ddf914b1b527d0429a3d713cfe3a.png");
+    background-image: url(https://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/img/23f3ddf914b1b527d0429a3d713cfe3a.png);
     background-repeat: no-repeat;
     background-position: 0 -192px;
 }
 
 /* 快 */
 .mod_service_unit .mod_service_kuai {
-    background-image: url("https://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/img/23f3ddf914b1b527d0429a3d713cfe3a.png");
+    background-image: url(https://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/img/23f3ddf914b1b527d0429a3d713cfe3a.png);
     background-repeat: no-repeat;
     background-position: -41px -192px;
 }
 
 /* 好 */
 .mod_service_unit .mod_service_hao {
-    background-image: url("https://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/img/23f3ddf914b1b527d0429a3d713cfe3a.png");
+    background-image: url(https://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/img/23f3ddf914b1b527d0429a3d713cfe3a.png);
     background-repeat: no-repeat;
     background-position: -82px -192px;
 }
 
 /* 省 */
 .mod_service_unit .mod_service_sheng {
-    background-image: url("https://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/img/23f3ddf914b1b527d0429a3d713cfe3a.png");
+    background-image: url(https://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/img/23f3ddf914b1b527d0429a3d713cfe3a.png);
     background-repeat: no-repeat;
     background-position: -123px -192px;
 }
