--- a/css/js_index.css
+++ b/css/js_index.css
@@ -285,8 +285,14 @@ body {
     width: 190px;
     height: 120px;
 }
-
 /* header 结束 */
+
+/* 内容1开始 */
+.mod_container {
+    height: 500px;
+    background-color: pink;
+}
+/* 内容1结束 */
 
 /* footer 开始 */
 .footer {
