--- a/css/js_index.css
+++ b/css/js_index.css
@@ -12,8 +12,10 @@
 
 body {
     background-color: rgb(242, 242, 242);
-    /* TEST */
-    height: 1000px;
+}
+
+body a:hover {
+    color: #e2231a;
 }
 
 /* 顶部开始 */
@@ -458,4 +460,31 @@ body {
 .mod_help_cover_more a:hover {
     color: #e2231a;
 }
+
+/* copyright */
+.mod_copyright_inner {
+    border-top: 1px solid #e1e1e1;
+}
+
+.mod_copyright_links {
+    margin-top: 10px;
+    text-align: center;
+    height: 18px;
+}
+
+.mod_copyright_links a {
+    font-size: 12px;
+    color: #666;
+    line-height: 18px;
+    text-decoration: none;
+    font-family: "Microsoft YaHei", tahoma, arial, "Hiragino Sans GB", "\\5b8b体", sans-serif;
+}
+
+.mod_copyright_links span {
+    color: #ccc;
+    font-size: 12px;
+    margin: 0 10px;
+    text-align: center;
+}
+
 /* footer 结束 */
