--- a/css/demo12.css
+++ b/css/demo12.css
@@ -3,6 +3,17 @@
     padding: 0;
 }
 
+@font-face {
+    font-family: 'icomoon'; 
+    src:  url('../fonts/icomoon.eot?mcsslk');
+    src:  url('../fonts/icomoon.eot?mcsslk#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?mcsslk') format('truetype'),
+    url('../fonts/icomoon.woff?mcsslk') format('woff'),
+    url('../fonts/icomoon.svg?mcsslk#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background-color: #f3f5f7;
 }
@@ -10,7 +21,7 @@ body {
 header {
     /* position: relative; */
     height: 100px;
-    width: 1190px;
+    width: 1250px;
     margin: 0 auto;
     background-color: pink;
     padding-top: 30px;
@@ -20,6 +31,7 @@ header {
     width: 195px;
     height: 42px;
     background-color: purple;
+    float: left;
 }
 
 .logo a {
@@ -28,4 +40,70 @@ header {
     height: 42px;
     text-indent: -999px; 
     overflow: hidden;  /* 设置了文字缩进后，如果不加这句代码会在网页缩小的时候出现，所以加上overflow hidden 可以保证 */
+}
+
+header ul {
+    float: left;
+    margin-left: 30px;
+}
+
+header li {
+    float: left;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 25px;
+}
+
+header li a { /* a 行内元素，需要转换成block才有宽高属性 */
+    display: block;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0 10px;
+    color: #333;
+}
+
+header li a:hover {
+    border-bottom: 2px solid #00a4ff;
+}
+
+header .search {
+    width: 410px;
+    height: 40px;
+    float: left;
+    margin-left: 40px;
+}
+
+.search input {
+    width: 360px;
+    height: 40px;
+    border: 1px solid #00a4ff;
+    outline: none; /* 轮廓线 */
+    padding: 15px;
+    float: left;
+}
+
+.search button {
+    width: 50px;
+    height: 40px;
+    border: 0;
+    outline: none;
+    float: left;
+    color: white;
+    background-color: #00a4ff;
+    font-family: "icomoon";
+    font-size: 20px;
+}
+
+.personal {
+    float: right;
+    background-color: purple;
+    width: 200px;
+    height: 40px;
+}
+
+.personal dt {
+    float: left;
+    height: 40px;
+    line-height: 40px;
+    font-size: 18px;
 }
