--- a/css/demo12.css
+++ b/css/demo12.css
@@ -107,3 +107,77 @@ header .search {
     line-height: 40px;
     font-size: 18px;
 }
+
+.banner {
+    height: 420px;
+    position: relative;
+}
+
+.banner .inner {
+    height: 100%;
+    position: relative;
+    background-color: skyblue;
+}
+
+.banner .subnav {
+    position: absolute;
+    width: 190px;
+    height: 100%;
+    background-color: rgba(1, 0, 0, 0.3);
+}
+
+.subnav ul {
+    padding: 10px 0;
+}
+
+.subnav li {
+    width: 190px;
+    position: absolute;
+    padding-left: 20px;
+    height: 40px;
+    line-height: 40px;
+    color: white;
+}
+
+.subnav li a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+
+.subnav span {
+    position: absolute;
+    right: 20px;
+}
+
+.subnav a:hover  {
+    color: #00a4ff;
+}
+
+.banner .circle {
+    width: 175px;
+    height: 20px;
+    /* background-color: #fff; */
+    position: absolute;
+    left: 50%;
+    margin-left: -88px;
+    bottom: 15px;
+}
+
+.circle i {
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background-color:rgba(255, 255, 255, 0.4);
+    margin: 0 auto;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.circle i:hover {
+    width: 20px;
+    background-color: #fff;
+}
