--- a/css/demo12.css
+++ b/css/demo12.css
@@ -175,9 +175,20 @@ header .search {
     margin: 0 auto;
     border-radius: 6px;
     cursor: pointer;
+    transition: all 0.2s;
 }
 
 .circle i:hover {
     width: 20px;
+    background-color: #fff;
+}
+
+.rightnav {
+    width: 220px;
+    height: 300px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(0, -50%);
     background-color: #fff;
 }
